app/assets/stylesheets/header_styles.scss
header.header {
  border-bottom: 1px solid black;
  margin: 0 160px;
  padding: 10px;
  font-weight: 700;
  min-width: 800px;
  position: relative;
}

div.positioned-options {
  position: relative;
}

header > a {
  display: block;
  text-align: center;
  margin: 0 auto;
}

header  h1 {
  color:red;
  font-size: 36px;
  font-weight: 900;
  font-family: "Overlock";
  margin: 20px 0 10px 0;
}

header > h1, h2 {
  text-align: center;
}

div.user-options h3{
  position: relative;
}

div.user-options ul{
  display:none;
  background: white;
}

div.user-options h3:hover ul{
  display:block;
  position:absolute;
  border: 1px solid #ccc;
  min-width: 180px;
}

div.user-options li {
  padding: 5px;
  border-bottom: 1px solid #ccc;
}

div.user-options li:last-of-type {
  border: 0px;
}

div.user-options li:hover {
  background:red;
  color:white;
}

button.log-out {
  background:transparent;
  border:0;
  padding:0;
  font: inherit;
  padding: 0 0 0 10px;
  color: inherit;
}

div.user-options {
  position: absolute;
  z-index: 1;
  top: 80px;
  padding: 0px 40px;
}

div.user-options a {
  padding: 10px;
}

div.user-options > a:hover {
  color:red;
}

div.user-options > a:last-of-type {
  border-left: 1px solid black;
}

div.sign-in button {
  padding: 0 10px 0 10px;
  border-right: 1px solid black;
}

div.sign-in button:last-of-type {
  border: 0;
}

div.sign-in  button:hover {
  color: red;
  cursor: pointer;
}

div.main-content {
  padding: 20px 160px;
}

form.header-search {
  position:absolute;
  bottom: 10px;
  right: 0;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 5px;
}

form.header-search button, div.search button {
  display: inline-block;
  background: image-url("search_icon.png");
  background-repeat:no-repeat;
  background-size: 100% 100%;
  width:25px;
  height: 25px;
  margin: auto 0;
}

div.header-search button {
  position: absolute;
  top: 0px;
  right: 5px;
}

form.header-search button:hover, button.log-out:hover {
  cursor: pointer;
}

